add WNE to website: venue and organizers and clean HTML code

--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
             <li>
               <a href="#Pre-meetings" class="link">Pre-meetings</a>
             </li>
-            <!--<li>
+            <li>
               <a href="#place" class="link">Venue</a>
             </li>
-            <li>
+            
+            <!--<li>
               <a href="#hackaton" class="link">Hackaton</a>
             </li>-->
 
@@ -472,7 +473,8 @@
         <h3>Why R? Pre-meetings</h3>
       </header>
     </div>
-    <img src="img/bg/europa_whyr2019_15_05.jpg" alt="pre-meetings" style="width:100%"> </section>
+    <img src="img/bg/europa_whyr2019_15_05.jpg" alt="pre-meetings"> 
+  </section>
   <!-- <div class="owl-carousel owl-theme">
     <div class="slider-item">
       <img src="img/meetings/copen_car.jpg"> </div>
@@ -485,24 +487,24 @@
     <div class="slider-item">
       <img src="img/meetings/berlin_car.jpg"> </div>
   </div> -->
-  <!-- <header>
-    <h3>Venue</h3>
-  </header>
+
   <section id="place" class="place">
     <div class="wrapper">
       <header>
-        <h4>Wrocław</h4>
-        <h4>ul. Piłsudskiego 49-57</h4>
-        <h4>.</h4>
-        <h4>Scandic Hotel Wrocław</h4>
-        <p>With 10 versatile meeting and conference rooms, state-of-the-art meeting technology and individual conference menus, we can organise your event exactly as you want it to be. After your meeting or a bit of sightseeing, visit our restaurant and
-          bar “My Corner” where you can try local specialities. You can also opt for a workout in our gym, followed by a relaxing moment in the sauna. At the end of the day, enjoy a pleasant night’s sleep in our rooms, done up in classic or modern Scandinavian
-          design. Scandic Wroclaw is close to tons of popular sights, cosy cafés, theatres, the opera and philharmonic. We offer the perfect starting point for exploring the fascinating labyrinth of bridges and islands that make up this city. In just
-          10 minutes, you are at the market square in the historical old town or at the train station. Don’t miss out on the Africarium, a complex within Wroclaw Zoo that is unique in the world, dedicated to water-based African species and ecosystems.
-          The airport is only a 30-minute drive away.</p>
+        <div align="left">
+        <h3>Venue</h3>
+        <div>
+      </header>
+      <header>
+        <div align="left">
+        <h4>Faculty of Economic Sciences, University of Warsaw</h4>
+        <h4>Długa 44/50</h4>
+        <h4>Warsaw, Poland</h4>
+        <p></p>
+        </div>
       </header>
     </div>
-  </section>-->
+  </section>
   <!-- <div class="wrapper"> </div>
   <section id="hackaton" class="about post">
     <div class="wrapper">
@@ -684,7 +686,6 @@
   </section>-->
               <!-- Sekcja zawierająca sposorów -->
               <section class="sponsoring" id="sponsoring">
-                <section id="Sponsoring" class="pre-meetings post">
                   <div class="wrapper">
                     <header>
                       <h4>Support</h4>
@@ -695,22 +696,23 @@
                         <h5>SILVER SPONSORS</h5>
                       </header>
                     </center>
-                    </a><div class="sponsors">
-                      </a><a href="https://www.jumpingrivers.com/">
+                    <div class="sponsors">
+                      <a href="https://www.jumpingrivers.com/">
                       <img src="img/sponsors/jumping_rivers.jpg" alt="Jumping Rivers">
                       </a>
-                      </a><a href="http://analyx.com/en/">
-                      <img src="img/sponsors/analyx.png" alt="Analyx">
-                      </a>
-                      </a><a href="https://idash.pl/">
+                      <a href="https://idash.pl/">
                       <img src="img/sponsors/logo_dst.png" alt="iDash">
-                    </a></div>
+                      </a>
+                      <a href="http://analyx.com/en/">
+                      <img src="img/sponsors/analyx.png" alt="Analyx" width="10%">
+                      </a>
+                    </div>
                     <center>
                       <header>
                         <h5>BRONZE SPONSORS</h5>
                       </header>
                     </center>
-                    </a><div class="sponsors">
+                    <div class="sponsors">
                       <a href="https://www.r-consortium.org/">
                       <img src="img/sponsors/r_conso_1.jpg" alt="R Consorcium">
                       </a>
@@ -725,20 +727,20 @@
                         <h5>VIOLET SPONSORS</h5>
                       </header>
                     </center>
-                    </a><div class="sponsors">
+                    <div class="sponsors">
                       <a href="https://www.wlogsolutions.com/">
                       <img src="img/sponsors/wlog.jpg" alt="WLOG">
-                      </a><center><a href="https://www.wlogsolutions.com/"> </a>
+                      </a>
 			
-                      </div>
                     </div>
-                    </section>
+                  </div>
+                </section>
                 <!-- Sekcja poświęcona organizatorom -->
                <section id="organizators" class="organizators post">
                   <div class="wrapper">
                     <header>
                       <header>
-                        <h4>Organising</h4>
+                        <h4>Bringing the event!</h4>
                         <h3>Organizers</h3>
                       </header>
                       <div class="galeria">
@@ -815,12 +817,12 @@
                 <section id="org" class="pre-meetings post">
                   <div class="wrapper">
                     <header>
-                      <h4>Whyr R? Foundation & PLinML Society</h4>
+                      <h3>ORGANIZATIONS</h3>
                     </header>
                   </div>
-                  <a href="http://whyr.pl">
-                   </a><center><a href="http://whyr.pl"> <img src="img/log_eng_nastrone.jpg" alt="Foundation" style="width:60%"> </a></center>
-		   </a><center><a href="http://plinml.org"><img src="img/logos/plinml.png" alt="Stowarzyszenie" style="width:15%"> </a></center>
+                  <a href="http://whyr.pl"> <img src="img/log_eng_nastrone.jpg" alt="Foundation" style="width:60%"> </a>
+                  <a href="http://plinml.org"><img src="img/logos/plinml.png" alt="Stowarzyszenie" style="width:12%"> </a>
+                  <center><a href="https://www.wne.uw.edu.pl/en/"><img src="img/logos/wne.jpg" alt="Stowarzyszenie" style="width:60%"> </a></center>
                 </section>
                 <!-- Partnerzy społecznościowi || poniżej wstaw link do stron partnerów, przyszykowałem już znaczniki <a> z pustym href=""-->
                 <section class="partners-postR">
@@ -831,7 +833,7 @@
                 <section id="org" class="pre-meetings post">
                   <div class="wrapper">
                     <header>
-                      <h4>Partners</h4>
+                      <h3>Partners</h3>
                       <div class="wrapper">
                         <header></header>
                         <div class="row">
