update title for workshops

--- a/index.html
+++ b/index.html
@@ -541,8 +541,8 @@
     <section id="workshop" class="workshop postL">
     <div class="wrapper">
       <header>
-        <h4>Workshops</h4>
-        <h3>Hosted in 2 sessions</h3>
+        <h4>Planned for Friday, 27th September</h4>
+        <h3>Workshops</h3>
         <p>Each workshop takes around 3 hours and happens in the morning or afternoon session.</p>
         <p>The description of proposed workshops can be found <a href="https://github.com/WhyR2019/workshops">here</a>.</p>
         
