add ERIN workshop + replace WNE affiliations

--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
 							<img src="img/guests/mch_crop.gif" alt="nikt">
 							<h4>Black is the new White - using eXplainable Artificial Intelligence in Business</h4>
 							<p>Marcin Chlebus</p>
-							<p><a href="https://www.wne.uw.edu.pl/">WNE UW</a>, Data Juice Lab, Data Dontus</p>
+							<p><a href="https://www.wne.uw.edu.pl/">Faculty of Economic Sciences, University of Warsaw</a>, Data Juice Lab, Data Dontus</p>
 						</div>
 					</div>
 				</div>
@@ -614,15 +614,16 @@
 							<img src="img/guests/Piotr_crop.gif" alt="Piotr Wojcik">
 							<h4>Speeding up R wih C++ (Rcpp)</h4>
 							<h4>- from basics to more advanced applications</h4>
-							<p>Piotr Wójcik, <a href="https://www.wne.uw.edu.pl/">Faculty of Economic Sciences, University of Warsaw</a></p>							
+							<p>Piotr Wójcik, <a href="https://www.wne.uw.edu.pl/">Faculty of Economic Sciences, University of Warsaw</a>, Data Science Lab</p>							
 						</div>
 					</div>
 				</div>
 					<div class="row">
           <div class="col-6">
 						<div class="work-content">
-							<img src="img/who-crop.gif" alt="To be announced">
-							<h4>To be announced</h4>
+							<img src="img/who-crop.gif" alt="Erin Hodgess">
+							<h4>High Performance Programming Tools with R (NVIDIA graphic cards needed)</h4>
+							<p>Erin Hodgess, <a href="https://www.wgu.edu/">Western Governors University</a></p>
 						</div>
 					</div>
 					<div class="col-6">
