added mi2 as a partner

--- a/index.html
+++ b/index.html
@@ -868,7 +868,12 @@
                               <a href="https://dssconf.pl/">
                                 <img src="img/logos/dss.jpg" alt="DATA SCIENCE SUMMIT" style="width:50%"> </a>
                             </p>
-
+                        </div>
+                        <div class="col-4 col-md-2">
+                            <p>
+                              <a href="https://mi2-warsaw.github.io/">
+                                <img src="img/logos/mi2datalab.jpg" alt="MI2 Data Lab" style="width:30%"> </a>
+                            </p>
                         </div>
                       </div>
                     </header>
