fixed scientific committee

--- a/index.html
+++ b/index.html
@@ -787,6 +787,7 @@
                       </div>
                     </header>
                   </div>
+                  <div class="wrapper">
 		       <header>
                 	<h3>Scientific Committee</h3>
 		       </header>
@@ -820,7 +821,7 @@
                         </div>
                 
                       </div>
-                    </div></header>
+                   </div>
                   </div>
                 </section>
                 <!-- Loga organiztorów -->
