add erin photo to the website

--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
 					<div class="row">
           <div class="col-6">
 						<div class="work-content">
-							<img src="img/who-crop.gif" alt="Erin Hodgess">
+							<img src="img/workshops/erin-crop.gif" alt="Erin Hodgess">
 							<h4>High Performance Programming Tools with R (NVIDIA graphic cards needed)</h4>
 							<p>Erin Hodgess, <a href="https://www.wgu.edu/">Western Governors University</a></p>
 						</div>
