--- a/index.html
+++ b/index.html
@@ -618,9 +618,9 @@
 					<div class="row">
           <div class="col-6">
 						<div class="work-content">
-							<img src="img/workshops/erin-crop.gif" alt="Erin Hodgess">
-							<h4>High Performance Programming Tools with R (NVIDIA graphic cards needed)</h4>
-							<p>Erin Hodgess, <a href="https://www.wgu.edu/">Western Governors University</a></p>
+							<img src="img/who-crop.gif" alt="TBA">
+							<h4>To be added soon</h4>
+							<p><a href="https://www.whyr.pl/">To be added soon</a></p>
 						</div>
 					</div>
 					<div class="col-6">
