pearson as a silver sponsor

--- a/index.html
+++ b/index.html
@@ -722,15 +722,28 @@
                         <h5>BRONZE SPONSORS</h5>
                       </header>
                     </center>
-                    <div class="sponsors">
-                      <a href="https://www.r-consortium.org/">
-                      <img src="img/sponsors/r_conso_1.jpg" alt="R Consorcium">
-                      </a>
-		
-            		      <a href="https://www.rstudio.com/">
-            		      <img src="img/sponsors/logo_rstudio.png" alt="rstudio">
-                      </a>
-         
+                    <div class="row">
+                      <div class="col-4 col-md-2">
+                        <p>
+                          <a href="https://www.r-consortium.org/">
+                          <img src="img/sponsors/r_conso_1.jpg" alt="R Consorcium">
+                          </a>
+                        </p>
+                      </div>
+		                  <div class="col-4 col-md-2">
+                        <p>
+                		      <a href="https://www.rstudio.com/">
+                		      <img src="img/sponsors/logo_rstudio.png" alt="rstudio">
+                          </a>
+                        </p>
+                      </div>
+		                  <div class="col-4 col-md-2">
+                        <p>
+                          <a href="https://www.pearson.pl/">
+                		      <img src="img/sponsors/pearson.png" alt="pearson">
+                          </a>
+                        </p>
+                      </div>
                       </div>
                       <center>
                       <header>
