--- a/index.html
+++ b/index.html
@@ -384,6 +384,8 @@
           }
         </style>
 			<img src="img/2019/agenda.jpg" alt="agenda" />
+			
+			<left><a href="https://github.com/WhyR2019/abstracts">Abstracts are already available.</a></left>
          <img src="img/bg/programme2.png" style="width:100%">
         
 
