we no longer accept submissions, so the submit button is gone

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <!-- / Main-menu -->
     </div>
     <div class="register-bar">
-      <a href="http://whyr.pl/2019/submit/">Submit your abstract</a>
+      <!-- <a href="http://whyr.pl/2019/submit/">Submit your abstract</a> -->
       <a href="http://whyr.pl/2019/register/">Register now</a>
     </div>
     <div class="first-title">
