--- a/index.html
+++ b/index.html
@@ -625,9 +625,9 @@
 					<div class="row">
           <div class="col-6">
 						<div class="work-content">
-							<img src="img/who-crop.gif" alt="TBA">
-							<h4>To be added soon</h4>
-							<p><a href="https://www.whyr.pl/">To be added soon</a></p>
+							<img src="img/logos/mlr.png" alt="mlr">
+							<h4>Machine Learning Pipelines and Reproducible Research with mlr3 and drake</h4>
+							<p>Jakob Richter, <a href="https://www.tu-dortmund.de/en/">TU Dortmund University</a> and  Patrick Schratz, <a href="https://www.uni-jena.de/en/">Friedrich-Schiller-University Jena</a></p>
 						</div>
 					</div>
 					<div class="col-6">
