updated Pat's affiliation

--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
 						<div class="work-content">
 							<img src="img/logos/mlr.png" alt="mlr">
 							<h4>Machine Learning Pipelines and Reproducible Research with mlr3 and drake</h4>
-							<p>Jakob Richter, <a href="https://www.tu-dortmund.de/en/">TU Dortmund University</a> and  Patrick Schratz, <a href="https://www.uni-jena.de/en/">Friedrich-Schiller-University Jena</a></p>
+							<p>Jakob Richter, <a href="https://www.tu-dortmund.de/en/">TU Dortmund University</a> and  Patrick Schratz, <a href="https://www.en.uni-muenchen.de/">LMU Munich</a></p>
 						</div>
 					</div>
 					<div class="col-6">
