add urls to after movies and linkedin

--- a/index.html
+++ b/index.html
@@ -103,10 +103,11 @@
           to invite R users from other countries.</p>
         <header>
           <h5>We are on
-            <a href="https://www.facebook.com/whyRconf/" target="_blank">Facebook</a> and
-            <a href="https://twitter.com/whyRconf" target="_blank">Twitter</a>.</h5>
+            <a href="https://www.facebook.com/whyRconf/" target="_blank">Facebook</a>,
+            <a href="https://twitter.com/whyRconf" target="_blank">Twitter</a> and <a href="https://www.linkedin.com/company/why-r" target="_blank">LinkedIn</a>.</h5>
           <h5>If you have any questions feel free to contact
             <a href="mailto:kontakt@whyr.pl">us</a>!</h5>
+          <h5><a href="https://whyr.pl/2017/movie/">After movie from 2017 </a><br><a href="https://whyr.pl/2018/movie/"> After movie from 2018</a></h5>
         </header>
         <header></header>
         <header>
