add WIMLDS, RLADIES and FURBS to partners

--- a/index.html
+++ b/index.html
@@ -926,6 +926,26 @@
                                 <img src="img/logos/mi2datalab.jpg" alt="MI2 Data Lab" style="width:30%"> </a>
                             </p>
                         </div>
+                        </div>
+                        <div class="row">
+                          <div class="col-4 col-md-2">
+                            <p>
+                              <a href="https://www.facebook.com/wimldsPL/">
+                                <img src="img/logos/wimlds2.png" alt="WIMLDSpl" style="width:100%"> </a>
+                            </p>
+                          </div>
+                          <div class="col-4 col-md-2">
+                            <p>
+                              <a href="http://furbs.org/">
+                                <img src="img/logos/furbs.jpg" alt="FURBS" style="width:50%"> </a>
+                            </p>
+                        </div>
+                        <div class="col-4 col-md-2">
+                            <p>
+                              <a href="https://www.meetup.com/pl-PL/Spotkania-Entuzjastow-R-Warsaw-R-Users-Group-Meetup/">
+                                <img src="img/logos/rladies.png" alt="RLADIES WARSA" style="width:30%"> </a>
+                            </p>
+                        </div>
                       </div>
 
                     <!-- Partnerzy społecznościowi || poniżej wstaw link do stron partnerów, przyszykowałem już znaczniki <a> z pustym href=""
