add PwC as silver sponsor

--- a/index.html
+++ b/index.html
@@ -736,21 +736,30 @@
                       </header>
                     </center>
                          <div class="row">
-                          <div class="col-4 col-md-2">
+                          <div class="col-6 col-md-2">
                             <p>
                               <a href="https://www.jumpingrivers.com/">
-                                <img src="img/sponsors/jumping_rivers.jpg" alt="Jumping Rivers">
+                                <img src="img/sponsors/jumping_rivers_circle.jpg" alt="Jumping Rivers">
                               </a>
                             </p>
                           </div>
-                          <div class="col-4 col-md-2">
+                          <div class="col-6 col-md-2">
                             <p>
                               <a href="http://analyx.com/en/">
                                 <img src="img/sponsors/analyx.png" alt="Analyx">
                               </a>
                             </p>
-                          </div>
-                          <div class="col-4 col-md-2">
+                          </div>  
+                        </div>
+                        <div class="row">
+                          <div class="col-6 col-md-2">
+                            <p>
+                              <a href="https://www.pwc.pl/">
+                                <img src="img/sponsors/PwC_logo_new.jpg" alt="PwC" style="width:50%">
+                              </a>
+                            </p>
+                          </div>                        
+                          <div class="col-6 col-md-2">
                             <p>
                               <a href="https://idash.pl/">
                                 <img src="img/sponsors/logo_dst.png" alt="iDash"> 
