add recommended hotel + trim text for data science round tables

--- a/index.html
+++ b/index.html
@@ -552,6 +552,13 @@
             <p>The WhyR 2018
               <a href="https://mlr-org.github.io/">hackathon </a>is a unique event during which you can contribute to the development of the mlr R package under the guidance of its authors. The participation in the hackathon is free for registered attendees of WhyR 2018, but to ensure the
               best experience there would be a separate registration for this event. The exact details will be available in May.</p>-->
+            
+            <header>
+              <h4>Recommended Hotel</h4>
+              <h3><a href="https://www.accorhotels.com/pl/hotel-2894-ibis-warszawa-centrum/index.shtml">Ibis Warszawa Centrum</a></h3>
+              <p>al. Solidarności 165, 00-876 Warsaw</p>
+            </header>
+            
             <header>
               <h4>Special Interest Groups</h4>
               <h3>DATA SCIENCE ROUND TABLES</h3>
@@ -562,16 +569,16 @@
                 <p style="color:#black">On the 27th of September we organize meetings of Special Interest Groups, <br>where participants of WhyR 2019 can discuss their experiences in three specific areas:</p>
                 <div class="row">
                   <div class="col-4"><i aria-hidden="true"></i>
-                    <h5>Diversity in Data Science</h5>
-                    <p style="color:black">This board aims to inspire members of affinity groups to pursue careers in data science. We hope that this platform for networking and exchange of experiences will help in boosting diversity of R community.  </p>
+                    <h5>Women in Data Science</h5>
+                    <p style="color:black">This board aims to inspire members of affinity groups to pursue careers in data science. We hope that this platform for networking will reduce the diversity of R community.  </p>
                   </div>
                   <div class="col-4">
                     <h5>Career-planning in Data Science</h5>
-                    <p style="color:black">During this meeting, participants of WhyR will have a chance to learn from more experienced R enthusiasts about their career paths.</p>
+                    <p style="color:black">Participants of WhyR will have a chance to learn from more experienced R enthusiasts about their career paths.</p>
                   </div>
                   <div class="col-4">
                     <h5>Teaching Data Science</h5>
-                    <p style="color:black">Data science, as every emerging field, requires constantly evolving set of skills. In any setting, both corporate and academic, teaching data analysis remains a challenge. During this meeting data science practitioners will share their
+                    <p style="color:black">Practitioners will share their
                       experiences in introducing their students to basic and advanced concepts of data science. </p>
                   </div>
                 </div>
