reduce the size of keynote photos

--- a/index.html
+++ b/index.html
@@ -250,24 +250,24 @@
               <a href="https://nowosad.github.io/" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i></a>
               <a href="https://twitter.com/jakub_nowosad" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
               <a href="https://github.com/Nowosad" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
-              Institute of Geoecology and Geoinformation, Adam Mickiewicz University</p>
+              Institute of Geoecology and Geoinformation, <br> Adam Mickiewicz University</p>
             
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-6 speaker">
-          <img src="img/workshops/marvin_crop.gif">
+          <img src="img/guests/marvin_crop.gif">
           <div class="who">
             <h5 style="color:#FFFFFF">Marvin Wright</h5>
             <p class="job" style="color:#FFFFFF">
               <a href="https://www.researchgate.net/profile/Marvin_Wright2" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i></a>
-              Leibniz Institute for Prevention Research and Epidemiology</p>
+              Leibniz Institute for Prevention Research <br> and Epidemiology</p>
             
           </div>
         </div>
         <div class="col-6 speaker">
-          <img src="img/workshops/sigrid_crop.gif">
+          <img src="img/guests/sigrid_crop.gif">
           <div class="who">
             <h5 style="color:#FFFFFF">Sigrid Keydana</h5>
             <p class="job" style="color:#FFFFFF">
