--- a/index.html
+++ b/index.html
@@ -731,7 +731,8 @@
     </div>
   </section>-->
               <!-- Sekcja zawierająca sposorów -->
-              <section class="sponsoring" id="sponsoring">
+              <section class="partners-postR" id="sponsoring">
+                
                   <div class="wrapper">
                     <header>
                       <h4>Could not happen without the support of sponsors!</h4>
@@ -743,36 +744,45 @@
                       </header>
                     </center>
                          <div class="row">
-                          <div class="col-6 col-md-2">
+                          <div class="col-4 col-md-2">
                             <p>
-                              <a href="https://www.jumpingrivers.com/">
-                                <img src="img/sponsors/jumping_rivers_circle.jpg" alt="Jumping Rivers">
+                              <a href="https://www.pwc.pl/">
+                                <img src="img/sponsors/logoPwC_bigger.jpg" alt="PwC">
                               </a>
                             </p>
                           </div>
-                          <div class="col-6 col-md-2">
-                            <p>
-                              <a href="http://analyx.com/en/">
-                                <img src="img/sponsors/analyx.png" alt="Analyx">
-                              </a>
-                            </p>
-                          </div>  
-                        </div>
-                        <div class="row">
-                          <div class="col-6 col-md-2">
-                            <p>
-                              <a href="https://www.pwc.pl/">
-                                <img src="img/sponsors/PwC_logo_new.jpg" alt="PwC" style="width:50%">
-                              </a>
-                            </p>
-                          </div>                        
-                          <div class="col-6 col-md-2">
+                          <div class="col-4 col-md-2">
                             <p>
                               <a href="https://idash.pl/">
                                 <img src="img/sponsors/logo_dst.png" alt="iDash"> 
                               </a>
                             </p>
                           </div>
+                          <div class="col-4 col-md-2">
+                            <p>
+                              <a href="https://www.jumpingrivers.com/">
+                                <img src="img/sponsors/jumping_rivers_circle.jpg" alt="Jumping Rivers">
+                              </a>
+                            </p>
+                          </div>
+                           
+                        </div>
+                        <div class="row">
+                             <div class="col-4 col-md-2">
+                            <p>
+                              <a href="http://analyx.com/en/">
+                                <img src="img/sponsors/analyx.png" alt="Analyx">
+                              </a>
+                            </p>
+                          </div>  
+                          <div class="col-4 col-md-2">
+                            <p>
+                              <a href="https://appsilon.com/">
+                                <img src="img/sponsors/appsilon.png" alt="Appsilon">
+                              </a>
+                            </p>
+                          </div>
+
                         </div>
                     <center>
                       <header>
