--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
                           <figure class="photo">
                             <img src="img/people/olga-crop.gif">
                           <div class="description">
-                            <p>Olga Mierzwa-Sulima</hp>
+                            <p>Olga Mierzwa-Sulima</p>
                             
                           </div>
                         </div>
@@ -506,6 +506,7 @@
                         </div>
 
     </div>
+   </div>
   </section>
   <section id="Pre-meetings">
     <div class="wrapper">
@@ -514,7 +515,7 @@
         <h3>Why R? Pre-meetings</h3>
       </header>
     </div>
-    <img src="img/bg/europa_whyr2019_berlin_small.jpg" alt="pre-meetings"> 
+    <img src="img/bg/europa_whyr2019_wieden.jpg" alt="pre-meetings"> 
   </section>
   <!-- <div class="owl-carousel owl-theme">
     <div class="slider-item">
