--- a/index.html
+++ b/index.html
@@ -865,7 +865,17 @@
                             <a href="https://www.facebook.com/pedzlenie" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                           </div>
                         </div>
+			 <div class="photo_container">
+                          <figure class="photo">
+                            <img src="img/guests/chilimoniuk.gif" alt="Jarosław Chilimoniuk"> </figure>
+                          <div class="description">
+                            <p>Jarosław Chilimoniuk</p>
+		            <p id="lider">Logistics Manager</p>
+                            <a href="https://www.researchgate.net/profile/Jaroslaw_Chilimoniuk" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i></a>
+                            </div>
+                        </div>
                       </div>
+			    
                     </header>
                   </div>
                   <div class="wrapper">
