add hackathon to the website

--- a/index.html
+++ b/index.html
@@ -52,8 +52,11 @@
               <a href="#workshop" class="link">Workshops</a>
             </li>
             <li>
+              <a href="http://whyr.pl/foundation/2019/hackathon/" class="link">Hackathon</a>
+            </li>            
+            <!--<li>
               <a href="#Pre-meetings" class="link">Pre-meetings</a>
-            </li>
+            </li>-->
             <li>
               <a href="#place" class="link">Venue</a>
             </li>
@@ -584,6 +587,20 @@
                   </div>
                 </div>
               </header>
+    <section id="hackathon">
+    <div class="wrapper">
+      <header>
+        <h4>Data Visualizations</h4>
+        <h3>HACKATHON</h3>
+      
+      <p>
+        For details <a href="https://whyr.pl/foundation/2019/hackathon/">see hackathon's website!</a>
+        <img src="img/plakat_hackathon2.jpg" alt="hackathon">
+      </p>
+      </header>  
+      </div>
+    </section>
+    
     <section id="workshop" class="workshop postL">
     <div class="wrapper">
       <header>
