added Jakub's workshop

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Why R? 2019: an international conference about R applications, ranging from pure science to business">
   <meta name="keywords" content="Conference Why R, machine learning, mathematics, R, coding, data analysis, data science, R users groups">
-  <meta name="author" content="Marcin Kosiński & Michał Burdukiewicz" >
+  <meta name="author" content="Michał Burdukiewicz" >
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat|Roboto" rel="stylesheet">
   <link rel="stylesheet" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
@@ -689,6 +689,14 @@
 							<p>Jakob Richter, <a href="https://www.tu-dortmund.de/en/">TU Dortmund University</a> and  Patrick Schratz, <a href="https://www.en.uni-muenchen.de/">LMU Munich</a></p>
 						</div>
 					</div>
+					<div class="col-6">
+						<div class="work-content">
+							<img src="img/guests/jakub_crop.gif" alt="spatial">
+							<h4>Basics of spatial data analysis</h4>
+							<p>Jakub Nowosad<a href="https://amu.edu.pl/en">Adam Mickiewicz University, Poznan</a></p>
+						</div>
+					</div>
+					
 				</div>
 				<div class="row">
 					<div class="col-12">
