--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
 						<div class="work-content">
 							<img src="img/guests/jakub_crop.gif" alt="spatial">
 							<h4>Basics of spatial data analysis</h4>
-							<p>Jakub Nowosad<a href="https://amu.edu.pl/en">Adam Mickiewicz University, Poznan</a></p>
+							<p>Jakub Nowosad, <a href="https://amu.edu.pl/en">Adam Mickiewicz University, Poznan</a></p>
 						</div>
 					</div>
 					
