--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
                 <p style="color:#black">On the 27th of September we organize meetings of Special Interest Groups, <br>where participants of WhyR 2019 can discuss their experiences in three specific areas:</p>
                 <div class="row">
                   <div class="col-4"><i aria-hidden="true"></i>
-                    <h5>Women in Data Science</h5>
+                    <h5>Diversity in Data Science</h5>
                     <p style="color:black">This board aims to inspire members of affinity groups to pursue careers in data science. We hope that this platform for networking will reduce the diversity of R community.  </p>
                   </div>
                   <div class="col-4">
