2 new data science round tables sessions

--- a/index.html
+++ b/index.html
@@ -586,6 +586,21 @@
                       experiences in introducing their students to basic and advanced concepts of data science. </p>
                   </div>
                 </div>
+<div class="row">
+                  <div class="col-4"><i aria-hidden="true"></i>
+                    <h5>Data Visualizations</h5>
+                    <p style="color:black">Discuss data visualizations good practices and approaches to various presentation challenges.</p>
+                  </div>
+                  <div class="col-4"><i aria-hidden="true"></i>
+                    <h5></h5>
+                    <p style="color:black"></p>
+                  </div>
+                  <div class="col-4">
+                    <h5>Ethics in Data Science</h5>
+                    <p style="color:black">With the increased importance of machine learning, we are becoming more and more concerned about the ethics of data science. </p>
+                  </div>
+                  
+                </div>                
               </header>
     <section id="hackathon">
     <div class="wrapper">
