deadline do hackathonu

--- a/index.html
+++ b/index.html
@@ -610,6 +610,7 @@
       
       <p>
         For details <a href="https://whyr.pl/foundation/2019/hackathon/">see hackathon's website!</a>
+        Deadline for the registration is 13th September (end of day).!
         <img src="img/plakat_hackathon2.jpg" alt="hackathon">
       </p>
       </header>  
