--- a/index.html
+++ b/index.html
@@ -1082,6 +1082,7 @@
                 				  <h3>
                 				    <a href="http://whyr.pl/foundation/2019/WhyR-2019-Agenda/">
                 				      Agenda Released + Regular Registration Ends Aug 31st!
+                				      The detailed plan is available under <a href="https://whyr.pl/2019/plan/">whyr.pl/2019/plan/</a>.
                 				    </a>
                 				  </h3>
                 				    <p>16-08-2019</p>
