--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
             cursor: pointer;
           }
         </style>
-        <left><a href="https://github.com/WhyR2019/abstracts">Abstracts are already available.</a></left>
+        <left><a href="http://whyr.pl/2019/plan">Find the conference plan here.</a></left>
 			<img src="img/2019/agenda.jpg" alt="agenda" />
 			
 			
