--- a/index.html
+++ b/index.html
@@ -574,22 +574,22 @@
                 <div class="row">
                   <div class="col-4"><i aria-hidden="true"></i>
                     <h5>Diversity in Data Science</h5>
-                    <p style="color:black">This board aims to inspire members of affinity groups to pursue careers in data science. We hope that this platform for networking will reduce the diversity of R community.  </p>
+                    <p style="color:black">This board aims to inspire members of affinity groups to pursue careers in data science. We hope that this platform for networking will reduce the diversity of R community. Moderator: Barbara Sobkowiak.</p>
                   </div>
                   <div class="col-4">
                     <h5>Career-planning in Data Science</h5>
-                    <p style="color:black">Participants of WhyR will have a chance to learn from more experienced R enthusiasts about their career paths.</p>
+                    <p style="color:black">Participants of WhyR will have a chance to learn from more experienced R enthusiasts about their career paths. Moderator: Kamil Kosiński.</p>
                   </div>
                   <div class="col-4">
                     <h5>Teaching Data Science</h5>
                     <p style="color:black">Practitioners will share their
-                      experiences in introducing their students to basic and advanced concepts of data science. </p>
+                      experiences in introducing their students to basic and advanced concepts of data science. Moderator: Leon Eyrich Jessen.</p>
                   </div>
                 </div>
 <div class="row">
                   <div class="col-4"><i aria-hidden="true"></i>
                     <h5>Data Visualizations</h5>
-                    <p style="color:black">Discuss data visualizations good practices and approaches to various presentation challenges.</p>
+                    <p style="color:black">Discuss data visualizations good practices and approaches to various presentation challenges. Moderator: Michał Burdukiewicz.</p>
                   </div>
                   <div class="col-4"><i aria-hidden="true"></i>
                     <h5></h5>
@@ -597,7 +597,7 @@
                   </div>
                   <div class="col-4">
                     <h5>Ethics in Data Science</h5>
-                    <p style="color:black">With the increased importance of machine learning, we are becoming more and more concerned about the ethics of data science. </p>
+                    <p style="color:black">With the increased importance of machine learning, we are becoming more and more concerned about the ethics of data science. Moderator: Steph Locke.</p>
                   </div>
                   
                 </div>                
