Join SlCK UrL -

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </div>
     <div class="register-bar">
       <!-- <a href="http://whyr.pl/2019/submit/">Submit your abstract</a> -->
-      <a href="http://whyr.pl/2019/register/">Register now</a>
+      <a href="https://join.slack.com/t/whyr/shared_invite/enQtNzcwMjExODk0NzM3LTRkMjhkYzliYzc5MGJhMzRlMzc1YzM0ZWJmNjM4MGNmMmM0MzYzZWJjYjhkZWM4ODA3MGY4MTUwNmJhMGNjNmY">Join Slack</a>
     </div>
     <div class="first-title">
       <!-- <h2>Conference</h2>
