--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
     <div class="register-bar">
       <!-- <a href="http://whyr.pl/2019/submit/">Submit your abstract</a> -->
       <a href="https://join.slack.com/t/whyr/shared_invite/enQtNzcwMjExODk0NzM3LTRkMjhkYzliYzc5MGJhMzRlMzc1YzM0ZWJmNjM4MGNmMmM0MzYzZWJjYjhkZWM4ODA3MGY4MTUwNmJhMGNjNmY">Join Slack</a>
+          <!-- <a href="http://whyr.pl/2019/submit/">Submit your abstract</a> -->
+      <a href="https://github.com/WhyR2019/presentations">Slides</a>
     </div>
     <div class="first-title">
       <!-- <h2>Conference</h2>
@@ -121,9 +123,10 @@
         </div>
 
         <img src="img/bg/programme.png" style="width:120%">
+        <!--
         <img src="img/bg/timeline.png" style="width:100%">
 
-        <!--
+        
         <div class="wrapper">
           <div class="row">
             <div class="column">
@@ -713,14 +716,6 @@
 						</div>
 					</div>
 					
-				</div>
-				<div class="row">
-					<div class="col-12">
-						<div class="work-content">
-							<h3><a href="http://whyr.pl/2019/register/">REGISTER HERE</a></h4>
-						</div>
-					</div>
-				</div>
     </div>
   </section>
               <!-- <section class="citation">
@@ -987,7 +982,7 @@
                     <header>
                       <h3>Partners</h3>
                       <div class="wrapper">
-                        <header></header>
+                    </header>
                         <div class="row">
                           <div class="col-4 col-md-2">
                             <p>
@@ -1056,9 +1051,7 @@
                             </a>
                           </p>
                         </div>
-
                       </div>
-                    </div>
   </section> 
   
   <section class="blog">	
@@ -1068,26 +1061,34 @@
                 				<h3>Our Blog</h3>	
                 			</header>	
                 			<div class="row">	
-                				<div class="col-4">
+                				<div class="col-3">
+                				  <img src="img/logos/whyr2018_logo_kolko_bezwro.png">
+                				  <h3>
+                				    <a href="http://whyr.pl/foundation/2019/WhyR-2019-Summary/">
+                				      Conference - Summary
+                				    </a>
+                				  </h3>
+                				    <p>19-12-2019</p>
+                				</div>
+                				<div class="col-3">
                 				  <img src="img/logos/whyr2018_logo_kolko_bezwro.png">
                 				  <h3>
                 				    <a href="http://whyr.pl/foundation/2019/WhyR-2019-Premeetings/">
-                				      Organize Why R? 2019 pre-meeting in your city
+                				      Organize a pre-meeting in your city
                 				    </a>
                 				  </h3>
                 				    <p>21-08-2019</p>
                 				</div>	
-                				<div class="col-4">
+                				<div class="col-3">
                 				  <img src="img/logos/whyr2018_logo_kolko_bezwro.png">
                 				  <h3>
                 				    <a href="http://whyr.pl/foundation/2019/WhyR-2019-Agenda/">
                 				      Agenda Released + Regular Registration Ends Aug 31st!
                 				    </a>
                 				  </h3>
-                				  <p>The detailed plan is available under <a href="https://whyr.pl/2019/plan/">whyr.pl/2019/plan/</a>.</p>
                 				    <p>16-08-2019</p>
                 				</div>	
-                				<div class="col-4">
+                				<div class="col-3">
                 				  <img src="img/logos/whyr2018_logo_kolko_bezwro.png">
                 				  <h3>
                 				    <a href="http://whyr.pl/foundation/2019/WhyR-2019-Keynotes-Workshops-Announced/">
