make pre-meetings map smaller

--- a/index.html
+++ b/index.html
@@ -520,8 +520,8 @@
         <h4>Pre-meetings</h4>
         <h3>Why R? Pre-meetings</h3>
       </header>
+      <img src="img/bg/europa_whyr2019_bauchi.jpg" alt="pre-meetings"> 
     </div>
-    <img src="img/bg/europa_whyr2019_bauchi.jpg" alt="pre-meetings"> 
   </section>
   <!-- <div class="owl-carousel owl-theme">
     <div class="slider-item">
@@ -1039,7 +1039,7 @@
                         <div class="col-4 col-md-2">
                             <p>
                               <a href="https://www.meetup.com/pl-PL/Spotkania-Entuzjastow-R-Warsaw-R-Users-Group-Meetup/">
-                                <img src="img/logos/rladies.png" alt="RLADIES WARSA" style="width:30%"> </a>
+                                <img src="img/logos/rladies.png" alt="RLADIES WARSAW" style="width:30%"> </a>
                             </p>
                         </div>
                       </div>
